그룹개설하기

--- a/codesquare/src/main/resources/templates/study/studyWanted.html
+++ b/codesquare/src/main/resources/templates/study/studyWanted.html
@@ -97,7 +97,7 @@ text-decoration: none;
 	
 		<div align="right">
 			<span sec:authorize="isAuthenticated()">
-			<a th:href="@{'/freeWrite/'+${boardKindId}}" type="button" style="margin-top: 10px" id="button1">글쓰기</a>
+			<a href="/studyWanted/writeView" type="button" style="margin-top: 10px" id="button1">글쓰기</a>
 			</span>
 		</div>
 		
