--- a/codesquare/src/main/resources/templates/study/studyWantedView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedView.html
@@ -4,6 +4,7 @@
 <head>
 <title>스터디모집</title>
 <link rel="stylesheet" type="text/css" th:href="@{/static/styles/study/study.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/static/styles/study/groupOpening.css}">
 <style>
 	#a{
 	transition: background-color .2s;
