--- a/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
@@ -104,11 +104,11 @@
 									<img class="avatar rounded-circle shadow" th:src="@{/static/codesquareDB/default/default_user_image4.jpg}" alt="Avatar">
 									<div th:id="|list_${group.id}|" class="media-body">
 										<h5 class="groupId" th:text="${group.groupId}"></h5>
-										<div class="group-details font-weight-lighter">
+										<div class="group-details font-weight-lighter group-details-grid">
 											<span th:text="${group.levelId}"></span>
 											<span th:text="${group.tagId}"></span>
 											<span th:text="${group.localeId}"></span>
-											<span th:text="${group.memberCount}"></span>
+											<span th:text="|현재  ${group.memberCount}명 참여중|"></span>
 										</div>
 									</div>
 								</div>
