--- a/codesquare/src/main/resources/templates/layout/mainLayout2.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout2.html
@@ -35,7 +35,7 @@
 
 <!-- 페이지의 푸터부분 -->
 
-<footer th:replace="fragments/footer2 :: footerFragment2"></footer> 
+<footer th:replace="fragments/footer :: footerFragment"></footer> 
 
 <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
