--- a/codesquare/src/main/resources/templates/fragments/footer.html
+++ b/codesquare/src/main/resources/templates/fragments/footer.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<footer id="footer" class="section footer-classic context-dark bg-image" style="background: #2d3246;" th:fragment="footerFragment">
-<div class="container">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	xmlns:sd="http://www.thymeleaf.org/spring-data"
+	layout:decorator="layout/mainLayout2"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<footer id="footer" class="section footer-classic context-dark bg-image" style="background: #5b2e7c;" th:fragment="footerFragment">
+<th:block layout:fragment="css" >
+	<link rel="stylesheet" type="text/css" th:href="@{/static/styles/footerCustom.css}">
+</th:block>
+<div class="container footer-container">
           <div class="row row-30">
             <div class="col-md-4 col-xl-5">
-              <div class="pr-xl-4"><a class="brand" href="/"><img class="brand-logo-light" th:src="@{/static/images/logo.png}" alt="noimg" style="width:100px;"></a>
+              <div class="pr-xl-4"><a class="brand" href="/"><img class="brand-logo-light" th:src="@{/static/images/logo.png}" alt="noimg" style="width:100px; background-color: white;"></a>
                 <p>BitCamp_Gangnam Team.CodeSquare<br/>
                    현업 프로그래머 및 지망생들을 위한 스터디사이트
                 </p>
                 Rights
                 <p class="rights"><span>©  </span><span class="copyright-year">2019</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p>
               </div>
-            </div>
+            </div> 
             <div class="col-md-4">
               <h5>Contacts</h5>
               <dl class="contact-list">
