--- a/codesquare/src/main/resources/templates/layout/myPageLayout.html
+++ b/codesquare/src/main/resources/templates/layout/myPageLayout.html
@@ -132,8 +132,8 @@
 
 
 		<!-- 페이지의 푸터부분 -->
-
-		<footer th:replace="fragments/footer2 :: footerFragment2"></footer>
+		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+		<footer th:replace="fragments/footer :: footerFragment"></footer>
 
 		<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
