--- a/codesquare/src/main/resources/templates/fragments/footer.html
+++ b/codesquare/src/main/resources/templates/fragments/footer.html
@@ -1,57 +1,80 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:sd="http://www.thymeleaf.org/spring-data"
 	layout:decorator="layout/mainLayout2"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<footer id="footer" class="section footer-classic context-dark bg-image" style="background: #5b2e7c;" th:fragment="footerFragment">
-<th:block layout:fragment="css" >
-	<link rel="stylesheet" type="text/css" th:href="@{/static/styles/footerCustom.css}">
-</th:block>
-<div class="container footer-container">
-          <div class="row row-30">
-            <div class="col-md-4 col-xl-5">
-              <div class="pr-xl-4"><a class="brand" href="/"><img class="brand-logo-light" th:src="@{/static/images/logo.png}" alt="noimg" style="width:100px; background-color: white;"></a>
-                <p>BitCamp_Gangnam Team.CodeSquare<br/>
-                   현업 프로그래머 및 지망생들을 위한 스터디사이트
-                </p>
-                Rights
-                <p class="rights"><span>©  </span><span class="copyright-year">2019</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p>
-              </div>
-            </div> 
-            <div class="col-md-4">
-              <h5>Contacts</h5>
-              <dl class="contact-list">
-                <dt>Address:</dt>
-                <dd>서울 강남구 테헤란로5길 11 YOO빌딩 2,3층</dd>
-              </dl>
-              <dl class="contact-list">
-                <dt>email:</dt>
-                <dd><a href="mailto:#">killfine1988@gmail.com</a></dd>
-              </dl>
-              <dl class="contact-list">
-                <dt>phones:</dt>
-                <dd><a href="tel:#">+82 01029128804</a> <span>or</span> <a href="tel:#">+82 01029298804</a>
-                </dd>
-              </dl>
-            </div>
-            <div class="col-md-4 col-xl-3">
-              <h5>Links</h5>
-              <ul class="nav-list">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a href="#">Pricing</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row no-gutters social-container">
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
-        </div>
-        </div>
-      </footer>
+<footer id="footer" class="section footer-classic context-dark bg-image"
+	style="background: #5b2e7c;" th:fragment="footerFragment">
+	<th:block layout:fragment="css">
+		<link rel="stylesheet" type="text/css"	th:href="@{/static/styles/footerCustom.css}">
+	</th:block>
+	<div class="container footer-container">
+		<div class="row row-30">
+			<div class="col-md-4 col-xl-5">
+				<div class="pr-xl-4">
+					<a class="brand" href="/"><img class="brand-logo-light"
+						th:src="@{/static/images/logo.png}" alt="noimg"
+						style="width: 100px; background-color: white;"></a>
+					<p>
+						BitCamp_Gangnam Team.CodeSquare<br /> 현업 프로그래머 및 지망생들을 위한 스터디사이트
+					</p>
+					Rights
+					<p class="rights">
+						<span>©  </span><span class="copyright-year">2019</span><span> </span><span>Waves</span><span>. </span><span>All
+							Rights Reserved.</span>
+					</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<h5>Contacts</h5>
+				<dl class="contact-list">
+					<dt>Address:</dt>
+					<dd>서울 강남구 테헤란로5길 11 YOO빌딩 2,3층</dd>
+				</dl>
+				<dl class="contact-list">
+					<dt>email:</dt>
+					<dd>
+						<a href="mailto:#">killfine1988@gmail.com</a>
+					</dd>
+				</dl>
+				<dl class="contact-list">
+					<dt>phones:</dt>
+					<dd>
+						<a href="tel:#">+82 01029128804</a> <span>or</span> <a
+							href="tel:#">+82 01029298804</a>
+					</dd>
+				</dl>
+			</div>
+			<div class="col-md-4 col-xl-3">
+				<h5>Links</h5>
+				<ul class="nav-list">
+					<li><a href="#">About</a></li>
+					<li><a href="#">Projects</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contacts</a></li>
+					<li><a href="#">Pricing</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="row no-gutters social-container">
+		<div class="col">
+			<a class="social-inner" href="#"><span
+				class="icon mdi mdi-facebook"></span><span>Facebook</span></a>
+		</div>
+		<div class="col">
+			<a class="social-inner" href="#"><span
+				class="icon mdi mdi-instagram"></span><span>instagram</span></a>
+		</div>
+		<div class="col">
+			<a class="social-inner" href="#"><span
+				class="icon mdi mdi-twitter"></span><span>twitter</span></a>
+		</div>
+		<div class="col">
+			<a class="social-inner" href="#"><span
+				class="icon mdi mdi-youtube-play"></span><span>google</span></a>
+		</div>
+	</div> -->
+</footer>
