--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -106,7 +106,7 @@
 
   <!-- 페이지의 푸터부분 -->
 
-  <footer th:replace="fragments/footer2 :: footerFragment2"></footer>
+<!--   <footer th:replace="fragments/footer :: footerFragment"></footer> -->
   <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
