--- a/codesquare/src/main/resources/templates/study/studyWanted.html
+++ b/codesquare/src/main/resources/templates/study/studyWanted.html
@@ -56,7 +56,10 @@ text-decoration: none;
 	border : none;
 	color: #251233;
 }
-
+td s{
+padding-bottom: 0;
+vertical-align: middle
+}
 
 </style>
 <title>자유게시판</title>
@@ -82,15 +85,13 @@ text-decoration: none;
 </div>
 	<div class="container" align="right">
 		<table class="table table-hover row-clickable">
-			<tr th:each="Board:${list}">
+			<tr class="row" th:each="Board:${list}">
 
-	             <td><a th:href="@{'/study/StdMo/' + ${Board.id}}"><span th:text="${Board.title}" style="color: black; font-weight: bold; padding-right: 150px;"></span></a></td>
-	             <td th:text="${Board.nickName}" style="padding-left: 100px;"></td>
-	             <td style="padding-right: 1px; width: 30px;"><i class="far fa-eye"></i></td>
-	             <td style="padding-left: 1px;" th:text="${Board.hit}" ></td>
-	             <td style="padding-right: 1px; width: 30px;"><i class="fas fa-heart"></i></td>
-	             <td th:text="${Board.likeCount}" style="padding-right: 7px; padding-left: 1px;"></td>
-	             <td th:text="${Board.writeDateBoard}" style="padding-right: 1px; padding-left: 1px;"></td>
+	             <td class="col-md-8"><a th:href="@{'/study/StdMo/' + ${Board.id}}"><span th:text="${Board.title}" style="color: black; font-weight: bold; "></span></a></td>
+	             <td class="col-md-1" th:text="${Board.nickName}" style="= text-align: left;"></td>
+	             <td class="col-md-1" style="= text-align: center;"><i class="far fa-eye" style="padding-right: 5px;"></i><span th:text="${Board.hit}"></span></td>
+	             <td class="col-md-1" style="= text-align: center;"><i class="fas fa-heart" style="padding-right: 5px;"></i><span th:text="${Board.likeCount}"></span></td>
+	             <td class="col-md-1" th:text="${Board.writeDateBoard}" ></td>
 	        </tr>
 		</table>
 	</div>
